# lightning-hydra-wandb-template

./: .gitignore  README.md  init.py  pyproject.toml  requirements.txt
conf/: config.yaml
conf/command/: lr_find.yaml  test.yaml  train.yaml
conf/dataset/: dataset.yaml
conf/model/: upernet.yaml
jobs/: 1g  3g  a100  rtx  utils
src/project_name/: __main__.py  utils.py
src/project_name/datasets/: datamdule.py  datamodule.py
src/project_name/models/: module.py  upernet.py
