[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-name"
authors = [{ name = "author name", email = "author@email.com" }]
description = "Project description"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "lightning",
    "hydra-core",
    "wandb",
    "segmentation-models-pytorch",
    "rasterio",
]

[project.optional-dependencies]
dev = [
    "gitchangelog >= 3.0.4, < 4.0.0",
    "ruff >= 0.5.0, < 1.0",
]
docs = [
    "mkdocs-material >= 9.5.0, < 10",
    "mdx-include >= 1.4.0, < 2",
]
test = [
    "coverage >= 7.6.0, < 8",
    "pytest >= 8.3.0, < 9",
    "pytest-cov >= 5.0.0, < 6.0",
]

[tool.hatch.version]
path = "src/project_name/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/project_name"]

[tool.ruff]
line-length = 119
select = ["E", "F", "UP"]
